objects/Async_WakeUp__e/Async_WakeUp__e.object-meta.xml
<CustomObject>
    <label>Async WakeUp</label>
    <pluralLabel>Async WakeUps</pluralLabel>
</CustomObject>