objects/Async_WakeUp__e/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <description>New batch size (REDUCE_BATCH_SIZE) or batch size for event context.</description>
    <label>Batch Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>