objects/Async_WakeUp__e/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <description>Name of the class that failed.</description>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>