objects/Async_WakeUp__e/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description>ID of the related SF_Async__c task.</description>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>