objects/Async_WakeUp__e/fields/Target_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Record_Id__c</fullName>
    <description>ID of the business object (Account, etc.)</description>
    <label>Target Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>