objects/Async_WakeUp__e/fields/Workers_Count__c.field-meta.xml
<CustomField>
    <fullName>Workers_Count__c</fullName>
    <description>Number of Queueable workers currently running (REDUCE_BATCH_SIZE context).</description>
    <label>Workers Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>